[tool.poetry]
name = "Toggle Code"
version = "0.1.0"
description = ""
authors = ["Akos Szolgyen <szolgyen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
numpy = "^1.26.4"
plotly = "^5.20.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
